2010-08-10  Yoshiki Hayashi  <yhayashi@google.com>

Reviewed by Kent Tamura.

        Iterate over :first-letter so that it will be included in innerText.
        https://bugs.webkit.org/show_bug.cgi?id=39863

        Test: fast/dom/inner-text-first-letter.html

        * editing/TextIterator.cpp:
        (WebCore::TextIterator::TextIterator):
        (WebCore::TextIterator::advance):
        (WebCore::TextIterator::handleTextNode):
        (WebCore::TextIterator::handleTextBox):
        (WebCore::TextIterator::emitText):
        * editing/TextIterator.h:

2010-08-10  Yoshiki Hayashi  <yhayashi@google.com>

        Reviewed by Kent Tamura.

        Iterate over :first-letter so that it will be included in innerText.
        https://bugs.webkit.org/show_bug.cgi?id=39863

        * fast/dom/inner-text-first-letter-expected.txt: Added.
        * fast/dom/inner-text-first-letter.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@65062 bbb929c8-8fbe-4397-9dbb-9b2b20218538